# micro-llm

./: .gitignore  .milestones.freeze.sha256  README.md  defi_edges_oracle.jsonl  latent_arc_denoise.json  latent_arc_denoise_100.csv  pyproject.toml  pytest.ini  wd_baseline.csv  wd_guarded.csv  wd_guarded.json
.artifacts/: REPORT_M8.md  REPORT_M8_TIER1.md  REPORT_M8_from_rows.md  arc_stage11_priors.npz  defi_bench.csv  defi_bench.json  defi_bench_dist.csv  defi_bench_dist_report.md  defi_bench_report.md  defi_benchmark_latest_report.md  defi_benchmark_latest_summary.json  defi_dist_v1_r5.csv  defi_dist_v1_r5.json  defi_dist_v1_r5.md  defi_edges_hf_r3.csv  defi_edges_hf_r3.json  defi_edges_hf_r3.md  defi_edges_ltv_r3.csv  defi_edges_ltv_r3.json  defi_edges_ltv_r3.md  defi_edges_oracle_r3.csv  defi_edges_oracle_r3.json  defi_edges_oracle_r3.md  defi_mapper.joblib  defi_metrics.csv  defi_metrics_prior.csv  defi_milestone10_report.md  defi_milestone10_summary.json  defi_milestone11_report.md  defi_milestone11_summary.json  defi_milestone1_summary.json  defi_milestone2_summary.json  defi_milestone3_summary.json  defi_milestone4_summary.json  defi_milestone5_report.md  defi_milestone5_summary.json  defi_milestone6_report.md  defi_milestone6_summary.json  defi_milestone7_report.md  defi_milestone8_report.md  (+50 more)
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml  pytest-checkpoint.ini  wdd_arc_impl_patched-checkpoint.py
benches/: audit_bench.py  audit_matched_filter_parser.py  defi_smoke.jsonl  gen_defi_prompts.py  junk.csv  phrases.json  single_prompt_audit.py  (+3 more)
(+562 files in other folders)
